--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",        // 或者 "ESNext"
     "module": "ESNext",        // 关键点：必须设为 ESNext、Node16 等，不能是 CommonJS
     "moduleResolution": "node",
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
